--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,9 @@
 # Default gameserver world name
 gameserverworldname: HBR01
 
+# Item cooldowns (in seconds!)
+smokescreen: 15.0
+
 # Database setup
 host: localhost
 port: 3306
