--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,7 @@ gameserverworldname: HBR01
 
 # Item cooldowns (in seconds!)
 smokescreen: 15.0
+cloakduration: 15
 
 # Database setup
 host: localhost
