Added functionality to Assassin's Cloak.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,7 +2,8 @@
 gameserverworldname: HBR01
 
 # Item cooldowns (in seconds!)
-smokescreen: 15.0
+smokescreen: 15
+cloakduration: 10
 
 # Database setup
 host: localhost
