Continue reworking ThrownGrenadeItem

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,12 @@ gameserverworldname: HBR01
 smokescreen: 15
 cloakduration: 10
 
+# Grenade unpin and fuse times (in ticks!)
+# FYI: 1 second = 20 game ticks
+# FYI: 1 redstone tick = 2 game ticks, 4 redstone ticks = 2*4 game ticks.
+grenade_unpinduration: 10
+blindgrenade_fuseduration: 70
+
 # Database setup
 host: localhost
 port: 3306
