--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,8 +18,8 @@ spectralstab_cooldown: 7.0
 cooldownbar_quality: 3
 
 # Grenade unpin and fuse times (in ticks!)
-  # FYI: 1 second = 20 ticks
-  # FYI: 1 redstone tick = 2 ticks, 4 redstone ticks = 2*4 ticks.
+#  FYI: 1 second = 20 ticks
+#  FYI: 1 redstone tick = 2 ticks, 4 redstone ticks = 2*4 ticks.
 grenade_unpinduration: 10
 grenade_fuseduration: 70
 
@@ -40,6 +40,24 @@ notchswisdom_duration: 8.0
 
 # Notch's Wisdom health increase per second (0.0 - 20.0)
 notchswisdom_healthpersecond: 3
+
+# Sorcerer's Totems' active duration (in seconds!)
+totem_duration: 60.0
+
+# Sorcerer's Totems' effect radius
+totem_radius: 4.0
+
+# The number of particles spawned around a Sorcerer's Totem
+#  (adjust this as needed when making the radius bigger/smaller)
+totem_particlecount: 10
+
+# Sorcerer's Healing Totem's health healed per second (0.0 - 20.0)
+#  Default is 2.0 (1 heart) per second
+totemhealing_healthpersecond: 2.0
+
+# Sorcerer's Harming Totem's damage dealt per second (0.0 - 20.0)
+#  Default is 2.0 (1 heart) per second
+totemharming_dmgpersecond: 2.0
 
 # Database setup
 host: localhost
