--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,6 +8,6 @@ depend: [ProtocolLib]
 commands:
   class:
     description: Get a class.
-  spawnshard:
+  shard:
     description: Spawns a shard at one of the shard spawn locations on the map
 
