--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
             <version>3.4.3</version>
             <scope>compile</scope>
         </dependency>
-        <!-- ProtocolLib (NMS API) -->
+        <!-- ProtocolLib (NMS API) - Server must have the ProtocolLib plugin in order for the HBR plugin to work-->
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
